--- a/education_iOS/AgoraEducation/StoryBoards/Main/en.lproj/Main.strings
+++ b/education_iOS/AgoraEducation/StoryBoards/Main/en.lproj/Main.strings
@@ -3,13 +3,13 @@
 "C8r-GQ-Fxh.placeholder" = "Name";
 
 /* Class = "UIButton"; normalTitle = "进入教室"; ObjectID = "UEU-w3-aae"; */
-"UEU-w3-aae.normalTitle" = "Join Class";
+"UEU-w3-aae.normalTitle" = "Enter Classroom";
 
 /* Class = "UITextField"; placeholder = "密码"; ObjectID = "bpE-MQ-ak5"; */
 "bpE-MQ-ak5.placeholder" = "Password";
 
 /* Class = "UILabel"; text = "进入教室"; ObjectID = "poB-tT-Mak"; */
-"poB-tT-Mak.text" = "Join Class";
+"poB-tT-Mak.text" = "Enter Classroom";
 
 /* Class = "UILabel"; text = "Powered by agora.io"; ObjectID = "swM-eV-3Hz"; */
 "swM-eV-3Hz.text" = "Powered by agora.io";
