--- a/education_iOS/AgoraEducation/Supporting Files/en.lproj/InfoPlist.strings
+++ b/education_iOS/AgoraEducation/Supporting Files/en.lproj/InfoPlist.strings
@@ -5,4 +5,4 @@
   Created by SRS on 2020/2/19.
   Copyright © 2020 yangmoumou. All rights reserved.
 */
-CFBundleDisplayName = "声网益课堂";
+CFBundleDisplayName = "Agora Online Classroom";
