update white  version & support HTTP multi language & config apihost

--- a/education_iOS/AgoraEducation/Supporting Files/en.lproj/Localizable.strings
+++ b/education_iOS/AgoraEducation/Supporting Files/en.lproj/Localizable.strings
@@ -25,9 +25,9 @@ MaterialsAreaText = "Materials area";
 ChatroomText = "Chatroom";
 StudentText = "Student";
 
-OneToOneText = "One-to-One";
-SmallClassText = "Small Class";
-LargeClassText = "Large Class";
+OneToOneText = "One to One Classroom";
+SmallClassText = "Small Classroom";
+LargeClassText = "Lecture Hall";
 
 UserNameVerifyText = "class name and user name must be within 20 characters";
 
